--- a/index.html
+++ b/index.html
@@ -35,32 +35,60 @@
 
 
         <div class="style-light">
+            <div class="content">
             <div class="section2">
                 <h2>Some random information.</h2>
-                <div class="img-container">
-                    <ul class="illustration">
-                        <li>
+                    <div class="illustration">
+                        <div class="element">
                             <div class="rect"></div>
                             <p>this is some subtext under an illustration</p>
-                        </li>
-                        <li>
+                        </div>
+                        <div class="element">
                             <div class="rect"></div>
                             <p>this is some subtext under an illustration</p>
-                        </li>
-                        <li>
+                        </div>
+                        <div class="element">
                             <div class="rect"></div>
                             <p>this is some subtext under an illustration</p>
-                        </li>
-                        <li>
+                        </div>
+                        <div class="element">
                             <div class="rect"></div>
                             <p>this is some subtext under an illustration</p>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="style-quote">
+            <div class="content">
+                <p class="quote">“I learned to read carefully and not be satisfied with a rough understanding of the whole”</p>
+                <p class="quote-author">- Marcus Aurelius</p>
+            </div>
+
+        </div>
+
+        <div class="style-light">
+            <div class="content">
+                <div class="call-to-action">
+                    <div class="text-action">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="button-action">
+                    <button>Sign Up</button>
+                </div>
                 </div>
             </div>
         </div>
 
     </div>
+
+
+    <footer class="style-dark">
+        <p id="foot">Copyright @ me, myself and I 2024</p>
+    </div>
+    </footer>
 </body>
 
 </html>
